@@ -1,3 +1,10 @@
+2005-11-17  Vincent Noel  <vincent.noel@gmail.com>
+
+	* log_repaint.c (logview_scroll_and_focus_path): 
+	Use gtk_tree_selection_select_path instead of
+	gtk_tree_view_set_cursor to set the selection. Avoid obvious flicker
+	when switching to another log.
+
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>	    
 
 	* log_repaint.c: (selection_changed_cb),
